# watchtower-cli

./: .gitignore  CHANGELOG.md  CHANGES_SUMMARY.md  CLI_IMPLEMENTATION_GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUES.md  LICENSE  PHASE1_COMPLETE.md  PYTHON_SDK_IMPLEMENTATION_GUIDE.md  README.md  SDK.md  SECURITY.md  TESTING.md  adk-observability-system-design.md  fix_venv.ps1  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  tailwind.config.js  test_agent.py  test_agent_simple.py  test_minimal_adk.py  verify_setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release-cli.yml  release-sdk.yml  test.yml
docs/: ARCHITECTURE.md  CLI.md  SDK.md  TESTING-STATUS.md  TESTING.md
examples/: README.md  real_search_agent.py  simple_agent.py
src/components/: Features.tsx  Footer.tsx
src/components/ui/: Button.tsx  Terminal.tsx
tests/: test_basic.py  test_real_search.py
watchtower/: __init__.py  cleanup.py  collector.py  config.py  exceptions.py  plugin.py
watchtower/models/: __init__.py  events.py
watchtower/utils/: __init__.py  sanitization.py  serialization.py
watchtower/writers/: __init__.py  base.py  file_writer.py  stdout_writer.py
