[project]
name = "watchtower-adk"
version = "0.1.0"
description = "Terminal-based observability SDK for Google ADK agents"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Watchtower Contributors"}
]
keywords = ["adk", "observability", "tracing", "agents", "google-adk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "google-adk>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]
cloud = [
    "google-cloud-storage>=2.10.0",
    "boto3>=1.28.0",
    "asyncpg>=0.29.0",
]

[project.urls]
Homepage = "https://github.com/Watchtower-Labs/watchtower-cli"
Documentation = "https://github.com/Watchtower-Labs/watchtower-cli#readme"
Repository = "https://github.com/Watchtower-Labs/watchtower-cli"
Issues = "https://github.com/Watchtower-Labs/watchtower-cli/issues"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["watchtower*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
